--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,105 @@
     <meta content="black" name=" apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection"/>
     <script src="../js/base.min.js"></script>
+    <link rel="stylesheet" href=" ../css/0522.css"/>
     <title></title>
 </head>
 <body>
+<!--1开始-->
+<div class="f1">
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
+</div>
 
+<!--1结束-->
+
+<!--2开始-->
+<div class="f2">
+    <div class="a2" flex="dir:top main:justify cross:center">
+        <div class="b2">
+        </div>
+        <div class="b2">
+        </div>
+    </div>
+</div>
+
+<!--2结束-->
+
+<!--3开始-->
+<div class="f3">
+    <div class="a3" flex="dir:top   cross:center">
+        <div class="c3" flex="main:left">
+            <div class="b3">
+            </div>
+        </div>
+
+        <div class="c3" flex="main:center">
+            <div class="b3">
+            </div>
+        </div>
+
+        <div class="c3" flex="main:right">
+            <div class="b3">
+            </div>
+        </div>
+    </div>
+</div>
+<!--3结束-->
+
+<!--4开始-->
+<div class="f4">
+    <div class="a4" flex="dir:top   main:justify">
+        <div class="d5" flex=" main:justify">
+            <div class="c4">
+                <div class="b4">
+                </div>
+
+                <div class="c4">
+                    <div class="b4">
+                    </div>
+                </div>
+        </div>
+
+        <div class="d5" flex=" main:justify">
+            <div class="c4" >
+                <div class="b4">
+                </div>
+
+                <div class="c4" >
+                    <div class="b4">
+                    </div>
+                </div>
+            </div>
+
+</div>
+<!--4结束-->
+
+<!--5开始-->
+<!--5结束-->
+
+<!--6开始-->
+<!--6结束-->
 </body>
 </html>
