--- a/html/index.html
+++ b/html/index.html
@@ -11,102 +11,134 @@
     <link rel="stylesheet" href=" ../css/0522.css"/>
     <title></title>
 </head>
-<body>
-<!--1开始-->
-<div class="f1">
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-</div>
 
+<body  flex="cross:top">
+<!--1开始-->
+    <div class="a1" flex="cross:center main:center">
+        <div class="b1">
+        </div>
+    </div>
 <!--1结束-->
 
 <!--2开始-->
-<div class="f2">
-    <div class="a2" flex="dir:top main:justify cross:center">
+<div class="a1" >
+    <div class="c2" flex="dir:top main:justify cross:center">
         <div class="b2">
         </div>
         <div class="b2">
         </div>
     </div>
-</div>
 
+</div>
 <!--2结束-->
 
 <!--3开始-->
-<div class="f3">
-    <div class="a3" flex="dir:top   cross:center">
-        <div class="c3" flex="main:left">
-            <div class="b3">
+<div class="a1">
+    <div class="c2" flex="dir:top main:justify">
+        <div class="c3">
+            <div class="b2">
             </div>
         </div>
-
         <div class="c3" flex="main:center">
-            <div class="b3">
+            <div class="b2">
             </div>
         </div>
-
         <div class="c3" flex="main:right">
-            <div class="b3">
+            <div class="b2">
             </div>
         </div>
     </div>
 </div>
+
 <!--3结束-->
 
 <!--4开始-->
-<div class="f4">
-    <div class="a4" flex="dir:top   main:justify">
-        <div class="d5" flex=" main:justify">
-            <div class="c4">
-                <div class="b4">
-                </div>
-
-                <div class="c4">
-                    <div class="b4">
-                    </div>
-                </div>
-        </div>
-
-        <div class="d5" flex=" main:justify">
-            <div class="c4" >
-                <div class="b4">
-                </div>
-
-                <div class="c4" >
-                    <div class="b4">
-                    </div>
-                </div>
+<div class="a1">
+    <div class="c2" flex="main:justify">
+        <div class="c4" flex="dir:top main:justify">
+            <div class="b4">
             </div>
-
+            <div class="b4">
+            </div>
+        </div>
+        <div class="c4" flex="dir:top main:justify">
+            <div class="b4">
+            </div>
+            <div class="b4">
+            </div>
+        </div>
+    </div>
 </div>
 <!--4结束-->
 
 <!--5开始-->
+<div class="a1">
+    <div class="c2" flex="main:justify">
+        <div class="c5" flex="dir:top main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+        <div class="c5" flex="cross:center">
+            <div class="b2">
+            </div>
+        </div>
+        <div class="c5" flex="dir:top main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+
+    </div>
+</div>
 <!--5结束-->
 
 <!--6开始-->
+<div class="a1">
+    <div class="c2" flex="dir:top main:justify">
+        <div class="c6" flex="main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+        <div class="c6" flex="main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+    </div>
+</div>
 <!--6结束-->
+<div class="a1">
+    <div class="c2" flex="dir:top main:justify">
+        <div class="c6" flex="main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+        <div class="c6" flex="main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+        <div class="c6" flex="main:justify">
+            <div class="b2">
+            </div>
+            <div class="b2">
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
