随身营业厅

--- a/html/index.html
+++ b/html/index.html
@@ -1,144 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/base.min.js"></script>
+    <script src="../js/0524.js"></script>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0, user-scalable=no" name="viewport" />
     <meta content="yes" name=" apple-mobile-web-app-capable" />
     <meta content="no" name="apple-touch-fullscreen" />
     <meta content="black" name=" apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection"/>
-    <script src="../js/base.min.js"></script>
-    <link rel="stylesheet" href=" ../css/0522.css"/>
-    <title></title>
+
+
+
+    <link rel="stylesheet" href="../css/swiper.min.css"/>
+    <link rel="stylesheet" href=" ../css/0524.css"/>
+    <title>随身营业厅</title>
 </head>
 
-<body  flex="cross:top">
-<!--1开始-->
-    <div class="a1" flex="cross:center main:center">
-        <div class="b1">
-        </div>
-    </div>
-<!--1结束-->
+<body>
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide one">
 
-<!--2开始-->
-<div class="a1" >
-    <div class="c2" flex="dir:top main:justify cross:center">
-        <div class="b2">
-        </div>
-        <div class="b2">
-        </div>
-    </div>
+            <div class="f1">
+                <img src="../image/1.png" class="img1">
+            </div>
+            <div class="fh1" flex="main:center">
+                <h1>200M免费流量待领取</h1>
+            </div>
 
+            <div class="fh2 fh21" flex="main:center cross:center">
+                <img src="../image/5.png" alt="" class="img5"/>
+                <h2>福建移动营业厅</h2>
+                <img src="../image/5.png" alt="" class="img5"/>
+            </div>
+
+
+            <div class="f2">
+                <div flex="main:center">
+                    <div class="fh3" flex="main:center">
+                        <h3>首次关注，立领100M</h3>
+                    </div>
+
+                </div>
+
+                <div class="fh4" flex="dir:top cross:center" >
+                    <img src="../image/2.png" alt=""/>
+                    <h4>识别二维码  关注公众号</h4>
+                </div>
+
+            </div>
+
+<div  flex="main:center">
+    <img src="../image/3.png" alt="" class="img3"/>
 </div>
-<!--2结束-->
+            <div class="fh5" flex="main:center">
+                <h5>向上滑动，再得100M</h5>
+            </div>
 
-<!--3开始-->
-<div class="a1">
-    <div class="c2" flex="dir:top main:justify">
-        <div class="c3">
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c3" flex="main:center">
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c3" flex="main:right">
-            <div class="b2">
-            </div>
-        </div>
-    </div>
-</div>
 
-<!--3结束-->
+        </div>
+        <div class="swiper-slide two">
 
-<!--4开始-->
-<div class="a1">
-    <div class="c2" flex="main:justify">
-        <div class="c4" flex="dir:top main:justify">
-            <div class="b4">
+            <div class="fh2 fh22" flex="main:center cross:center">
+                <img src="../image/5.png" alt="" class="img5"/>
+                <h2>福建移动营业厅</h2>
+                <img src="../image/5.png" alt="" class="img5"/>
             </div>
-            <div class="b4">
-            </div>
-        </div>
-        <div class="c4" flex="dir:top main:justify">
-            <div class="b4">
-            </div>
-            <div class="b4">
-            </div>
-        </div>
-    </div>
-</div>
-<!--4结束-->
 
-<!--5开始-->
-<div class="a1">
-    <div class="c2" flex="main:justify">
-        <div class="c5" flex="dir:top main:justify">
-            <div class="b2">
+
+            <div class="f2 f22">
+                <div flex="main:center">
+                    <div class="fh3 fh32" flex="main:center">
+                        <h3>首次关注，立领100M</h3>
+                    </div>
+
+                </div>
+
+                <div class="fh4" flex="dir:top cross:center" >
+                    <img src="../image/6.png" alt=""/>
+                    <h4>识别二维码  下载APP</h4>
+                </div>
+
             </div>
-            <div class="b2">
+
+
+            <div class="fh5" flex="main:center">
+                <h5>向下滑动，返回首页</h5>
             </div>
+            <div  flex="main:center">
+                <img src="../image/3.png" alt="" class="img3 img32"/>
+            </div>
+
+
+
+
+
         </div>
-        <div class="c5" flex="cross:center">
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c5" flex="dir:top main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
+
 
     </div>
-</div>
-<!--5结束-->
 
-<!--6开始-->
-<div class="a1">
-    <div class="c2" flex="dir:top main:justify">
-        <div class="c6" flex="main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c6" flex="main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
-    </div>
+
+
+
+<!--     如果需要分页器
+    <div class="swiper-pagination"></div>
+
+    &lt;!&ndash; 如果需要导航按钮 &ndash;&gt;
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+
+    &lt;!&ndash; 如果需要滚动条 &ndash;&gt;
+    <div class="swiper-scrollbar"></div>-->
 </div>
-<!--6结束-->
-<div class="a1">
-    <div class="c2" flex="dir:top main:justify">
-        <div class="c6" flex="main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c6" flex="main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
-        <div class="c6" flex="main:justify">
-            <div class="b2">
-            </div>
-            <div class="b2">
-            </div>
-        </div>
-    </div>
-</div>
+
 
 </body>
 </html>
